# provider-stack

./: .env.example  .gitignore  Cargo.toml  Dockerfile  Makefile  PHASE-7-LOCAL-DEV.md  README.md  docker-compose.yml
.github/workflows/: pr.yml
crates/api/: COMPAT-AUDIT.md  Cargo.toml
crates/api/src/: cli.rs  envelope.rs  error.rs  lib.rs  main.rs  middleware_auth.rs  routing.rs  state.rs
crates/api/src/routes/: auth_dashboard.rs  auth_stellar.rs  bundles.rs  council.rs  dashboard_pp.rs  entities.rs  events.rs  health.rs  holding.rs  mod.rs  operator.rs  spa.rs
crates/api/tests/: bundle_submit_http.rs  council_http.rs  council_removed_http.rs  dashboard_pp_http.rs  event_watcher_tick.rs  executor_tick.rs  health_http.rs  kyc_register.rs  mempool_tick.rs  metrics_snapshot.rs  sep10_http.rs  verifier_tick.rs  ws_events_e2e.rs
crates/api/tests/common/: mod.rs
crates/core/: Cargo.toml
crates/core/src/: bundle.rs  config.rs  error.rs  events.rs  holding.rs  lib.rs  mlxdr.rs
crates/core/src/auth/: jwt.rs  mod.rs  sep10.rs  sep43.rs
crates/core/src/pipelines/: event_watcher.rs  executor.rs  membership_convergence.rs  mempool.rs  metrics.rs  mod.rs  verifier.rs
crates/persistence/: Cargo.toml
crates/persistence/src/: db.rs  lib.rs  models.rs  repo.rs
crates/sdk/: Cargo.toml
crates/sdk/src/: channel.rs  lib.rs
frontend/: deno.json
frontend/src/: app-styles.css  app.ts  build.ts  build_test.ts
frontend/src/components/: page.ts
frontend/src/lib/: analytics.ts  api.ts  auth.ts  config.ts  config_deploy_test.ts  dom.ts  entity-auth.ts  events-client.ts  horizon.ts  jurisdictions.ts  moonlight-client.ts  router.ts  setup.ts  stellar.ts  tracer.ts  utxo-derivation.ts  utxo-session.ts  version-check.ts  wallet-entity.ts  wallet-kyc.ts  wallet.ts
frontend/src/shims/: buffer.ts
frontend/src/views/: home.ts  login.ts  pay-name.ts  pay-utxo.ts  provider.ts  recover.ts
frontend/src/views/entities/: register.ts
frontend/src/views/setup/: fund.ts  join.ts  layout.ts  metadata.ts
migrations/: 0000_init.sql  0001_channel_states.sql
