[package]
name = "provider-stack-api"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "provider-stack"
path = "src/main.rs"

[dependencies]
provider-stack-core = { path = "../core" }
provider-stack-persistence = { path = "../persistence" }
provider-stack-sdk = { path = "../sdk" }

actix-web.workspace = true
actix-ws.workspace = true
actix-files.workspace = true
actix-cors.workspace = true

tokio.workspace = true

tracing.workspace = true
tracing-subscriber.workspace = true
tracing-actix-web.workspace = true
tracing-opentelemetry.workspace = true
opentelemetry.workspace = true
opentelemetry_sdk.workspace = true
opentelemetry-otlp.workspace = true

include_dir.workspace = true

serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
dotenvy.workspace = true
jsonwebtoken.workspace = true
