[package]
name = "provider-stack-api"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[lib]
name = "provider_stack_api"
path = "src/lib.rs"

[[bin]]
name = "provider-stack"
path = "src/main.rs"

[dev-dependencies]
provider-stack-core = { path = "../core" }
provider-stack-persistence = { path = "../persistence" }
stellar-xdr.workspace = true
stellar-strkey.workspace = true
ed25519-dalek.workspace = true
sqlx.workspace = true
uuid.workspace = true
base64.workspace = true
serde_json.workspace = true

[dependencies]
provider-stack-core = { path = "../core" }
provider-stack-persistence = { path = "../persistence" }
provider-stack-sdk = { path = "../sdk" }

actix-web.workspace = true
actix-ws.workspace = true
actix-files.workspace = true
actix-cors.workspace = true

tokio.workspace = true

tracing.workspace = true
tracing-subscriber.workspace = true
tracing-actix-web.workspace = true
tracing-opentelemetry.workspace = true
opentelemetry.workspace = true
opentelemetry_sdk.workspace = true
opentelemetry-otlp.workspace = true

include_dir.workspace = true

serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
dotenvy.workspace = true
jsonwebtoken.workspace = true
sqlx.workspace = true
chrono.workspace = true
uuid.workspace = true
ed25519-dalek.workspace = true
stellar-strkey.workspace = true
base64.workspace = true
rand.workspace = true
futures-util = "0.3"
